OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DMA__c.field-meta.xml
<CustomField>
    <fullName>DMA__c</fullName>
    <description>Demographic Marketing Area for the Account</description>
    <label>* DMA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abilene-Sweetwater TX</fullName>
            </value>
            <value>
                <fullName>Albany GA</fullName>
            </value>
            <value>
                <fullName>Albany-Schenectady-Troy NY</fullName>
            </value>
            <value>
                <fullName>Albuquerque-Santa Fe NM</fullName>
            </value>
            <value>
                <fullName>Alexandria LA</fullName>
            </value>
            <value>
                <fullName>Alpena MI</fullName>
            </value>
            <value>
                <fullName>Amarillo TX</fullName>
            </value>
            <value>
                <fullName>Anchorage AK</fullName>
            </value>
            <value>
                <fullName>Atlanta GA</fullName>
            </value>
            <value>
                <fullName>Augusta GA</fullName>
            </value>
            <value>
                <fullName>Austin TX</fullName>
            </value>
            <value>
                <fullName>Bakersfield CA</fullName>
            </value>
            <value>
                <fullName>Baltimore MD</fullName>
            </value>
            <value>
                <fullName>Bangor ME</fullName>
            </value>
            <value>
                <fullName>Baton Rouge LA</fullName>
            </value>
            <value>
                <fullName>Beaumont-Port Arthur TX</fullName>
            </value>
            <value>
                <fullName>Bend OR</fullName>
            </value>
            <value>
                <fullName>Billings MT</fullName>
            </value>
            <value>
                <fullName>Biloxi-Gulfport MS</fullName>
            </value>
            <value>
                <fullName>Binghamton NY</fullName>
            </value>
            <value>
                <fullName>Birmingham AL</fullName>
            </value>
            <value>
                <fullName>Bluefield Beckley WV</fullName>
            </value>
            <value>
                <fullName>Boise ID</fullName>
            </value>
            <value>
                <fullName>Boston MA</fullName>
            </value>
            <value>
                <fullName>Bowling Green KY</fullName>
            </value>
            <value>
                <fullName>Buffalo NY</fullName>
            </value>
            <value>
                <fullName>Burlington VT- Plattsburgh NY</fullName>
            </value>
            <value>
                <fullName>Butte-Bozeman MT</fullName>
            </value>
            <value>
                <fullName>Casper-Riverton WY</fullName>
            </value>
            <value>
                <fullName>Cedar Rapids-Waterloo IA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>