OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DOM_Wire_Complete__c.field-meta.xml
<CustomField>
    <fullName>DOM_Wire_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOM/Wire Complete</label>
    <type>Checkbox</type>
</CustomField>