OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License__c</fullName>
    <label>Drivers License</label>
    <length>15</length>
    <type>Text</type>
</CustomField>