OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_CFL_Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>DTV_CFL_Corp_ID__c</fullName>
    <description>DIRECTV CFL Corp ID Number</description>
    <label>* DTV-CFL CORP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>