OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_COM_CORP_ID__c.field-meta.xml
<CustomField>
    <fullName>DTV_COM_CORP_ID__c</fullName>
    <description>DIRECTV Commercial CORP ID for this account.</description>
    <label>* DTV-COM CORP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>