OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_Communication_Consent__c.field-meta.xml
<CustomField>
    <fullName>DTV_Communication_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the user agreed to receive Marketing or Communications from DTV</description>
    <label>DTV Communication Consent</label>
    <type>Checkbox</type>
</CustomField>