OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_Dealer_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>DTV_Dealer_Create_Date__c</fullName>
    <label>DTV Dealer Create Date</label>
    <type>Date</type>
</CustomField>