OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_FFL_Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>DTV_FFL_Corp_ID__c</fullName>
    <description>DIRECTV FFL Corp ID number</description>
    <inlineHelpText>DIRECTV FFL Corp ID number</inlineHelpText>
    <label>* DTV-FFL CORP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>