OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_L_I_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>DTV_L_I_Prior_Month__c</fullName>
    <label>* DTV-L&amp;I Prior Month</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>