OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_MDU_CORP_ID__c.field-meta.xml
<CustomField>
    <fullName>DTV_MDU_CORP_ID__c</fullName>
    <label>* DTV-MDU CORP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>