OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_MDU_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>DTV_MDU_Prior_Month__c</fullName>
    <label>* DTV-MDU Prior Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>