OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_MDUD_CORP_ID__c.field-meta.xml
<CustomField>
    <fullName>DTV_MDUD_CORP_ID__c</fullName>
    <inlineHelpText>If cust group = ‘DTVMDUD’, then the DTV MDU ID = D2Lite ID</inlineHelpText>
    <label>* DTV-D2 LITE CORP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>