OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_MSOC__c.field-meta.xml
<CustomField>
    <fullName>DTV_MSOC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the dealer has a MSOC account.</description>
    <label>* DTV-MSOC</label>
    <type>Checkbox</type>
</CustomField>