OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_MSOS__c.field-meta.xml
<CustomField>
    <fullName>DTV_MSOS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the dealer has a DTV-MSOS account</description>
    <label>* DTV-MSOS</label>
    <type>Checkbox</type>
</CustomField>