OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_RES_CORP_ID__c.field-meta.xml
<CustomField>
    <fullName>DTV_RES_CORP_ID__c</fullName>
    <description>DIRECTV Residential Corp ID for this account.</description>
    <label>* DTV-RES CORP ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>