OnboardingV2Minimal/force-app/main/default/objects/Account/fields/DTV_SMATV_CORP_ID__c.field-meta.xml
<CustomField>
    <fullName>DTV_SMATV_CORP_ID__c</fullName>
    <description>Enter the DTV SMATV Corp ID if the dealer has this account type.</description>
    <label>* DTV-L&amp;I CORP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>