OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Exede_FFL__c.field-meta.xml
<CustomField>
    <fullName>Exede_FFL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the dealer is an Exede Fulfillment Dealer</description>
    <label>* Viasat FFL</label>
    <type>Checkbox</type>
</CustomField>