OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Exede_SI_ID__c.field-meta.xml
<CustomField>
    <fullName>Exede_SI_ID__c</fullName>
    <description>Exede SI number for this dealer / account</description>
    <label>* Viasat-SI ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>