OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Exede_SI_SO_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>Exede_SI_SO_Prior_Month__c</fullName>
    <description>Exede Activations for the prior month</description>
    <label>* Viasat SI/SO RES Prior Month</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>