OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Exede_SO_ID__c.field-meta.xml
<CustomField>
    <fullName>Exede_SO_ID__c</fullName>
    <description>Exede SO number for this dealer/account</description>
    <label>* Viasat-SO ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>