OnboardingV2Minimal/force-app/main/default/objects/Account/fields/External_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Account_ID__c</fullName>
    <description>ID from Perfect Vision org</description>
    <externalId>true</externalId>
    <label>External Account ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>