OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Face_to_Face__c.field-meta.xml
<CustomField>
    <fullName>Face_to_Face__c</fullName>
    <label>Face-to-Face Monthly Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>