OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Face_to_Face_Tactics__c.field-meta.xml
<CustomField>
    <fullName>Face_to_Face_Tactics__c</fullName>
    <label>Face-to-Face Tactics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Door-To-Door</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>National Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>