OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>