OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Field_Service_Regional_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Regional_Mgr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Service Regional Mgr</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>