OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>DLR Consultation Follow Up</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Day</fullName>
            </value>
            <value>
                <fullName>60 Day</fullName>
            </value>
            <value>
                <fullName>90 Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>