OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Frontier_Activated__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>* Frontier Activated</label>
    <type>Checkbox</type>
</CustomField>