OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Frontier_COM_MTD__c.field-meta.xml
<CustomField>
    <fullName>Frontier_COM_MTD__c</fullName>
    <label>* Frontier COM MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>