OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Frontier_Nation_Retail_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Nation_Retail_Agreements__c</fullName>
    <description>This field counts how many frontier nation retail agreements have been signed.</description>
    <label>Frontier Nation Retail Agreements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>