OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Frontier_National_Agent_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Frontier_National_Agent_Agreements__c</fullName>
    <label>Frontier National Agent Agreements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>