OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Frontier_Only__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, this checkbox restricts Chuzo user interface to automatically restrict Chuzo user interface experience site tabs. PER-5462</description>
    <label>Frontier Only</label>
    <type>Checkbox</type>
</CustomField>