OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Frontier_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Prior_Month__c</fullName>
    <description>Frontier Sales Total - Prior Month</description>
    <label>* Frontier RES Prior Month</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>