OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Frontier_Vendor_Count__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Vendor_Count__c</fullName>
    <label>Frontier Vendor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>