OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Frontier_Video__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that lets user sell video [PER-5137]</description>
    <label>Frontier Video</label>
    <type>Checkbox</type>
</CustomField>