OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Date__c</fullName>
    <label>* Hold Date</label>
    <type>Date</type>
</CustomField>