OnboardingV2Minimal/force-app/main/default/objects/Account/fields/HOLD_STATUS__c.field-meta.xml
<CustomField>
    <fullName>HOLD_STATUS__c</fullName>
    <label>* Hold Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>