OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Home_Concierge_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Home_Concierge_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox enables Home Concierge for Chuzo users PER-[4314]</description>
    <label>Home Concierge</label>
    <type>Checkbox</type>
</CustomField>