OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Last_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Date__c</fullName>
    <inlineHelpText>Date of last invoice for the selected account</inlineHelpText>
    <label>* Last Invoice Date</label>
    <type>Date</type>
</CustomField>