OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount__c</fullName>
    <label>* Last Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>