OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <label>* Last Payment Date</label>
    <type>Date</type>
</CustomField>