OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Lead_Collection__c.field-meta.xml
<CustomField>
    <fullName>Lead_Collection__c</fullName>
    <label>Discuss Lead Collection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Click-to-call</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Messenger</fullName>
            </value>
            <value>
                <fullName>Chuzo</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
                <isActive>false</isActive>
                <label>WhatsApp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>