OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Lead_Generation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generation__c</fullName>
    <label>Lead Generation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>National Retail</fullName>
            </value>
            <value>
                <fullName>Referral/Concierge</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>