OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Liftgate_Required__c.field-meta.xml
<CustomField>
    <fullName>Liftgate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liftgate Required</label>
    <type>Checkbox</type>
</CustomField>