OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Live_Photo__c.field-meta.xml
<CustomField>
    <fullName>Live_Photo__c</fullName>
    <label>Live Photo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>