OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Logo_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Logo_Content_Document_Id__c</fullName>
    <label>Logo Content Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>