OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Marketing_Areas__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Areas__c</fullName>
    <label>Marketing Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Abilene-Sweetwater (#164)</fullName>
            </value>
            <value>
                <fullName>Albany, GA (#154)</fullName>
            </value>
            <value>
                <fullName>Albany-Schenectady-Troy (#59)</fullName>
            </value>
            <value>
                <fullName>Albuquerque-Santa Fe (#46)</fullName>
            </value>
            <value>
                <fullName>Alexandria, LA (#178)</fullName>
            </value>
            <value>
                <fullName>Alpena (#208)</fullName>
            </value>
            <value>
                <fullName>Amarillo (#132)</fullName>
            </value>
            <value>
                <fullName>Anchorage (#151)</fullName>
            </value>
            <value>
                <fullName>Atlanta (#10)</fullName>
            </value>
            <value>
                <fullName>Augusta-Aiken (#108)</fullName>
            </value>
            <value>
                <fullName>Austin (#40)</fullName>
            </value>
            <value>
                <fullName>Bakersfield (#125)</fullName>
            </value>
            <value>
                <fullName>Baltimore (#26)</fullName>
            </value>
            <value>
                <fullName>Bangor (#159)</fullName>
            </value>
            <value>
                <fullName>Baton Rouge (#94)</fullName>
            </value>
            <value>
                <fullName>Beaumont-Port Arthur (#143)</fullName>
            </value>
            <value>
                <fullName>Bend, OR (#185)</fullName>
            </value>
            <value>
                <fullName>Billings (#168)</fullName>
            </value>
            <value>
                <fullName>Biloxi-Gulfport (#155)</fullName>
            </value>
            <value>
                <fullName>Binghamton (#161)</fullName>
            </value>
            <value>
                <fullName>Birmingham (Anniston and Tuscaloosa) (#44)</fullName>
            </value>
            <value>
                <fullName>Bluefield-Beckley-Oak Hill (#166)</fullName>
            </value>
            <value>
                <fullName>Boise (#102)</fullName>
            </value>
            <value>
                <fullName>Boston (Manchester) (#9)</fullName>
            </value>
            <value>
                <fullName>Bowling Green (#177)</fullName>
            </value>
            <value>
                <fullName>Buffalo (#52)</fullName>
            </value>
            <value>
                <fullName>Burlington-Plattsburgh (#96)</fullName>
            </value>
            <value>
                <fullName>Butte-Bozeman (#186)</fullName>
            </value>
            <value>
                <fullName>Casper-Riverton (#199)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>