OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Marketing_Programs__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Programs__c</fullName>
    <label>Marketing Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brinks</fullName>
                <label>Home Security</label>
            </value>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Optimum</fullName>
            </value>
            <value>
                <fullName>Security Referral</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>MSOC</fullName>
            </value>
            <value>
                <fullName>Frontier for Business</fullName>
            </value>
            <value>
                <fullName>Spectrum for Business</fullName>
            </value>
            <value>
                <fullName>Brightspeed</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
                <isActive>false</isActive>
                <label>DIRECTV</label>
            </value>
            <value>
                <fullName>Xfinity</fullName>
                <isActive>false</isActive>
                <label>Xfinity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>