OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Marketing_Tactics__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tactics__c</fullName>
    <label>Marketing Tactics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Store Front</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>