OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MFA__c.field-meta.xml
<CustomField>
    <fullName>MFA__c</fullName>
    <defaultValue>&quot;Email&quot;</defaultValue>
    <description>Determines authentication method for users related to the account (PER-2847)</description>
    <label>MFA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>