OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Microsite_List__c.field-meta.xml
<CustomField>
    <fullName>Microsite_List__c</fullName>
    <label>SEO- Microsite List</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>