OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_Accessory_Sales__c.field-meta.xml
<CustomField>
    <fullName>MTD_Accessory_Sales__c</fullName>
    <inlineHelpText>Includes Accessory and Commercial Accessory</inlineHelpText>
    <label>* Accessory Sales MTD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>