OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_AT_T_Mobility__c.field-meta.xml
<CustomField>
    <fullName>MTD_AT_T_Mobility__c</fullName>
    <label>* AT&amp;T Mobility MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>