OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_CLINK__c.field-meta.xml
<CustomField>
    <fullName>MTD_CLINK__c</fullName>
    <description>CenturyLink Sales Total - Month to Date</description>
    <label>* CenturyLink RES MTD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>