OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_Commercial_PVA__c.field-meta.xml
<CustomField>
    <fullName>MTD_Commercial_PVA__c</fullName>
    <description>MTD activations for DIRECTV Commercial accounts including: DTV-COM, DTV-MSO COM, and DTV-CFL.</description>
    <inlineHelpText>MTD activations for DIRECTV Commercial accounts including: DTV-COM, DTV-MSO COM, and DTV-CFL.</inlineHelpText>
    <label>* DTV-COM MTD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>