OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_DTV_MDU__c.field-meta.xml
<CustomField>
    <fullName>MTD_DTV_MDU__c</fullName>
    <description>MDU Activations for the current month</description>
    <inlineHelpText>MDU Activations for the current month</inlineHelpText>
    <label>* DTV-MDU MTD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>