OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_DTV_RES_PVAs__c.field-meta.xml
<CustomField>
    <fullName>MTD_DTV_RES_PVAs__c</fullName>
    <description>Directv Residential MTD Activations</description>
    <inlineHelpText>MTD Activations for DIRECTV Residential Accounts including: NSP, LSP, and FFL</inlineHelpText>
    <label>* AT&amp;T Video MTD</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>