OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_DTV_SMATV__c.field-meta.xml
<CustomField>
    <fullName>MTD_DTV_SMATV__c</fullName>
    <label>* DTV-L&amp;I MTD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>