OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_Exede_SI_SO_Activations__c.field-meta.xml
<CustomField>
    <fullName>MTD_Exede_SI_SO_Activations__c</fullName>
    <description>Exede Activations for the current month</description>
    <label>* Viasat SI/SO RES MTD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>