OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_Frontier__c.field-meta.xml
<CustomField>
    <fullName>MTD_Frontier__c</fullName>
    <description>Frontier Sales Total - Month to Date</description>
    <label>*  Frontier RES MTD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>