OnboardingV2Minimal/force-app/main/default/objects/Account/fields/MTD_Windstream__c.field-meta.xml
<CustomField>
    <fullName>MTD_Windstream__c</fullName>
    <description>Windstream Sales Total - Month to Date</description>
    <label>* Windstream RES MTD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>