OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Name_with_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Name_with_Dealer_Code__c</fullName>
    <formula>Name +&quot; - &quot;+ POE_Dealer_Code__c</formula>
    <label>Name with Dealer Code</label>
    <type>Text</type>
</CustomField>