OnboardingV2Minimal/force-app/main/default/objects/Account/fields/National_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User8</relationshipName>
    <type>Lookup</type>
</CustomField>