OnboardingV2Minimal/force-app/main/default/objects/Account/fields/NDA_Activated_Count__c.field-meta.xml
<CustomField>
    <fullName>NDA_Activated_Count__c</fullName>
    <label>NDA Activated Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>