OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Old_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Old_AccountId__c</fullName>
    <label>Old AccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>