OnboardingV2Minimal/force-app/main/default/objects/Account/fields/On_Probation__c.field-meta.xml
<CustomField>
    <fullName>On_Probation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Probation - DTV only</label>
    <type>Checkbox</type>
</CustomField>