OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Onboarding_Denied__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Denied__c</fullName>
    <label>Onboarding Denied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>