OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <summaryFilterItems>
        <field>Onboarding__c.Contract_Status__c</field>
        <operation>equals</operation>
        <value>Draft, New, Activated, In Approval Process</value>
    </summaryFilterItems>
    <summaryForeignKey>Onboarding__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>